# AI_RE

./: .gitattributes  .gitignore  CONTRIBUTING.md  PROJECT_TRACKING.md  README.md
Backend/: .env.example  README.md  aire.db  aire.db-shm  aire.db-wal  alembic.ini  pyproject.toml
Backend/app/: __init__.py  main.py  settings.py
Backend/app/api/dependencies/: ai.py  auth.py  database.py
Backend/app/api/errors/: __init__.py  handlers.py  models.py
Backend/app/api/middleware/: __init__.py  request_context.py
Backend/app/api/routes/: chat.py  devices.py  system.py
Backend/app/application/: chat_service.py  errors.py  pairing_service.py
Backend/app/application/models/: __init__.py  ai.py  chat.py  pairing.py
Backend/app/application/ports/: __init__.py  ai_service.py  chat_repository.py  credential_protector.py  device_repository.py
Backend/app/domain/: identity.py
Backend/app/infrastructure/: __init__.py  logging.py
Backend/app/infrastructure/ai/: __init__.py  local_runtime.py  mock.py
Backend/app/infrastructure/database/: __init__.py  chat_repository.py  connection.py  device_repository.py  models.py
Backend/app/infrastructure/security/: __init__.py  credentials.py  (+1 more)
Backend/migrations/: env.py
Backend/migrations/versions/: 20260715_0001_initial_chat.py  20260720_0002_device_pairing.py
Backend/tests/: test_chat_api.py  test_contracts.py  test_credentials.py  test_development_authenticator.py  test_local_runtime_ai_service.py  test_migrations.py  test_mock_ai_service.py  test_pairing_api.py  test_request_safety.py  test_system.py
Docs/: README.md
(+1113 files in other folders)
