[project]
name = "aire-backend"
version = "0.1.0"
description = "AI_RE C PC Backend"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic-settings>=2.7,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "jsonschema>=4.23,<5.0",
    "pytest>=8.3,<9.0",
    "pyyaml>=6.0,<7.0",
    "referencing>=0.35,<1.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
